--- a/Prediction_Sport_Activity.html
+++ b/Prediction_Sport_Activity.html
@@ -506,7 +506,6 @@ $(document).ready(function () {
 <div id="models-prediction" class="section level3">
 <h3>Models Prediction</h3>
 <p>model1 using decision tree classifier with 10 k-fold</p>
-<p>Decision tree did not lead to high accuraccy results (72.11%)</p>
 <pre><code>## Confusion Matrix and Statistics
 ## 
 ##           Reference
@@ -538,6 +537,8 @@ $(document).ready(function () {
 ## Detection Rate         0.2557   0.1145   0.1353  0.09563   0.1397
 ## Detection Prevalence   0.3469   0.1539   0.1902  0.13762   0.1713
 ## Balanced Accuracy      0.8976   0.7601   0.8510  0.77288   0.8585</code></pre>
+<p>Decision tree did not lead to high accuraccy results (74.09%)</p>
+<p>Model2 using random forest classifier.</p>
 <pre><code>## Confusion Matrix and Statistics
 ## 
 ##           Reference
